sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/NCA_Performance_Standard__c.object-meta.xml
<CustomObject>
    <label>NCA Performance Standard</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NCA Performance Standard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCA Performance Standards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>