sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>