sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Employee_Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Employee_Grade_Level__c</fullName>
    <label>Employee Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GS-5</fullName>
            </value>
            <value>
                <fullName>GS-6</fullName>
            </value>
            <value>
                <fullName>GS-7</fullName>
            </value>
            <value>
                <fullName>GS-9</fullName>
            </value>
            <value>
                <fullName>GS-11</fullName>
            </value>
            <value>
                <fullName>GS-13</fullName>
            </value>
            <value>
                <fullName>GS-15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>