sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>NCA Employee (Appeals)</fullName>
            </value>
            <value>
                <fullName>NCA Employee (800 BIN)</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Site Supervisor</fullName>
            </value>
            <value>
                <fullName>Supervisor of MPS/Appeals</fullName>
            </value>
            <value>
                <fullName>Director of MPS/Appeals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>