sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Error_Rate_Exceptional__c.field-meta.xml
<CustomField>
    <fullName>Error_Rate_Exceptional__c</fullName>
    <label>Error Rate Exceptional</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>