sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Error_Rate_Fully_Successful__c.field-meta.xml
<CustomField>
    <fullName>Error_Rate_Fully_Successful__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Rate Fully Successful</label>
    <type>TextArea</type>
</CustomField>