sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Production_Fully_Successful__c.field-meta.xml
<CustomField>
    <fullName>Production_Fully_Successful__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Production Fully Successful</label>
    <type>TextArea</type>
</CustomField>