sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Production_Unsuccessful__c.field-meta.xml
<CustomField>
    <fullName>Production_Unsuccessful__c</fullName>
    <label>Production Unsuccessful</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>