sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Return_Letter_Exceptional__c.field-meta.xml
<CustomField>
    <fullName>Return_Letter_Exceptional__c</fullName>
    <label>Return Letter Exceptional</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>