sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Return_Letter_Fully_Successful__c.field-meta.xml
<CustomField>
    <fullName>Return_Letter_Fully_Successful__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Letter Fully Successful</label>
    <type>TextArea</type>
</CustomField>