sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Timeliness_Exceptional__c.field-meta.xml
<CustomField>
    <fullName>Timeliness_Exceptional__c</fullName>
    <label>Timeliness Exceptional</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>