sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/fields/Timeliness_Unsuccessful__c.field-meta.xml
<CustomField>
    <fullName>Timeliness_Unsuccessful__c</fullName>
    <label>Timeliness Unsuccessful</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>