sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/listViews/Active_Performance_Standards.listView-meta.xml
<ListView>
    <fullName>Active_Performance_Standards</fullName>
    <columns>NAME</columns>
    <columns>Employee_Grade_Level__c</columns>
    <columns>Employee_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Performance Standards</label>
</ListView>