sfdx-source/nca-watrs/main/objects/NCA_Performance_Standard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Error_Rate_Exceptional__c</columns>
    <columns>Error_Rate_Fully_Successful__c</columns>
    <columns>Error_Rate_Unsuccessful__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>